# plivros

./: .cproject  .project  CMakeLists.txt  Doxyfile  FindDataBaseWrapper.cmake  build.sh
UI/: CMakeLists.txt
imgs/: CMakeLists.txt  imgs.qrc
pkg/: install.nsi  plivros-Fedora_11.desktop  plivros-Fedora_11.spec  plivros-openSUSE_11.1.desktop  plivros-openSUSE_11.1.spec
rc/: User.db  imgs.qrc  plivros_mysqldb.sql  plivros_pt_BR.ts  plivros_sqlitedb.sql
sql/: plivros_mysqldb.mwb  plivros_sqlitedb.sql
src/: Author.cpp  Author.h  AuthorCollection.cpp  AuthorCollection.h  Book.cpp  Book.h  BookCollection.cpp  BookCollection.h  CMakeLists.txt  Collection.cpp  Collection.h  GenericSQL.cpp  GenericSQL.h  IniParser.cpp  IniParser.h  OS.h  Publisher.cpp  Publisher.h  PublisherCollection.cpp  PublisherCollection.h  Theme.cpp  Theme.h  ThemeCollection.h  main.cpp
src/core/: AuthorCollection.cpp  AuthorCollection.h  BookCollection.cpp  BookCollection.h  CMakeLists.txt  Collection.cpp  Collection.h  GenericSQL.cpp  GenericSQL.h  PublisherCollection.cpp  PublisherCollection.h  ThemeCollection.cpp  ThemeCollection.h
src/data/: Author.cpp  Author.h  Book.cpp  Book.h  CMakeLists.txt  Data.h  DataObject.cpp  DataObject.h  Publisher.cpp  Publisher.h  Theme.cpp  Theme.h
src/gui/: AddAuthor.cpp  AddAuthor.h  AddBook.cpp  AddBook.h  AddPublisher.cpp  AddPublisher.h  AddTheme.cpp  AddTheme.h  AuthorDetails.cpp  AuthorDetails.h  AuthorForm.cpp  AuthorForm.h  BookDetails.cpp  BookDetails.h  BookForm.cpp  BookForm.h  CMakeLists.txt  CategoryFrame.cpp  CategoryFrame.h  DataTableWidget.cpp  DataTableWidget.h  EditAuthor.cpp  EditAuthor.h  EditBook.cpp  EditBook.h  EditPublisher.cpp  EditPublisher.h  EditTheme.cpp  EditTheme.h  MainWindow.cpp  MainWindow.h  MessageBoxDataBaseException.cpp  MessageBoxDataBaseException.h  OperationsWidget.cpp  OperationsWidget.h  PropertiesGroupBox.cpp  PropertiesGroupBox.h  PublisherDetails.cpp  PublisherDetails.h  PublisherForm.cpp  (+9 more)
src/gui/UI/: AddPublihser.ui  AddPublisher.ui  AddTheme.ui  AuthorDetails.ui  AuthorForm.ui  BookDetails.ui  BookForm.ui  CategoryFrame.ui  MainWindow.ui  OperationsWidget.ui  PublisherDetails.ui  PublisherForm.ui  SearchForm.ui  ThemeForm.ui
ts/: CMakeLists.txt  mainwindow_pt_BR.ts  plivros_pt_BR.ts
